# bookish-3d-viewer

./: .gitattributes  .gitignore  Cargo.toml  Cargo.workspace  IMPROVEMENTS.md  README.md  mix.exs  wasm-pack.toml
config/: config.exs
lib/bookish_3d_viewer/: application.ex  camera.ex  config.ex  editor.ex  error.ex  file_handler.ex  menu.ex  model.ex  native.ex  renderer.ex  state.ex  supervisor.ex  utils.ex  viewer.ex
native/bookish_nif/: Cargo.toml
native/bookish_nif/src/: lib.rs
src/: camera.rs  color_picker.rs  config.rs  editor.rs  error.rs  image_viewer.rs  lib.rs  main.rs  menu.rs  model.rs  model_info.rs  renderer.rs  selection.rs  transform.rs  utils.rs  wasm.rs
src/shaders/: flat.wgsl  image.wgsl  wireframe.wgsl
www/: index.html
